test/zinc_source/compile_errors/tuples/06_compound_tuple_assignment.zn
// expected-error: operator '\+=' cannot be used with tuple destructuring

fn main() {
    x, y = 1
    x, y += 2
}
